# tools

./: .cursorindexingignore  .cursorrules  .env.example  .gitignore  CHANGELOG.md  Caddyfile  docker-compose.syncthing.yml  docker-compose.tunnel.yml  docker-compose.yml
.kilocode/skills/: SKILL.md
.kilocode/standards-enforcement/: SKILL.md
.roo/: system-prompt-architect.md  system-prompt-builder-liaison.md  system-prompt-compliance.md  system-prompt-coordinator.md  system-prompt-developer.md  system-prompt-reflection.md  system-prompt-research.md  system-prompt-reviewer.md  system-prompt-risk.md  system-prompt-tester.md  system-prompt-trading.md
.supercode/: def.json
caddy-addon/: README.md  tls-snippet.conf.example
n8n/workflows/: letta-payload-fork.json
platform-mcp-servers/n8n-flowengine/: Dockerfile  start.sh
platform-mcp-servers/platform-agent-toolkit-mcp/: Dockerfile  README.md  pyproject.toml
platform-mcp-servers/platform-agent-toolkit-mcp/src/: server.py
platform-mcp-servers/platform-financial-mcp/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
platform-mcp-servers/platform-financial-mcp/src/: server.py
platform-mcp-servers/platform-infrastructure-mcp/: Dockerfile  README.md  pyproject.toml
platform-mcp-servers/platform-infrastructure-mcp/src/: server.py
scripts/: 06_run_services.sh  git.sh  setup_custom_tls.sh  telemetry.sh
tradingview-api/: Dockerfile  package.json  tsconfig.json
tts-proxy/: Dockerfile  package-lock.json  package.json  tsconfig.json
tv-ws-proxy/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
(+278 files in other folders)
